--- a/assets/css/popup.css
+++ b/assets/css/popup.css
@@ -16,7 +16,7 @@
 
 .popup {
     display: none;
-    position: absolute;
+    position: relative;
     padding: 10px;
     border: 1px solid black;
     background: whitesmoke;
